Classe de Test Completa com Inserir, Alterar e Deletar

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Fábrica de Programador Web</title>
 </head>
 <body>
 	<h1>Hello World</h1>
